syntax = "proto3";

package proto.mrds.ledger.deployment;

// Import the Metadata from the core metadata.proto file
import "metadata.proto";

option go_package = "/api/mrdspb";

// Enum to represent the DeploymentState
enum DeploymentState {
    DeploymentState_UNKNOWN = 0;
	DeploymentState_PENDING = 1;
    DeploymentState_ACTIVE = 2;
    DeploymentState_INACTIVE = 3;
}

// Message representing the Deployment
message Deployment {
    // Metadata is the metadata that identifies the Deployment.
    core.Metadata metadata = 1;

    // Name is the name of the Deployment.
    string name = 2;

    // Status represents the current status of the Deployment.
    DeploymentStatus status = 3;
}

// Message representing the Status of a resource.
message DeploymentStatus {
    // State is the discrete condition of the resource.
    DeploymentState state = 1;

    // Message is a human-readable description of the resource's state.
    string message = 2;
}
